Fixed text alignment in 'Find out...' button

--- a/web/source/sass/pages/strain/strain_detail.scss
+++ b/web/source/sass/pages/strain/strain_detail.scss
@@ -278,6 +278,7 @@
                 color: $white;
                 position: absolute;
                 bottom: 3.5em;
+                max-width: 20em;
             }
 
             .recommendation-btn a {
